force-app/main/default/objects/Innovation_Idea__c/Innovation_Idea__c.object-meta.xml
<CustomObject>
    <label>Idea (Innohub)</label>
    <nameField>
        <label>Innovation Idea Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ideas (Innohub)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>