force-app/main/default/objects/Innovation_Idea__c/fields/Challenge__c.field-meta.xml
<CustomField>
    <fullName>Challenge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Challenge</label>
    <referenceTo>Challenge__c</referenceTo>
    <relationshipLabel>Ideas</relationshipLabel>
    <relationshipName>Ideas_Innohub</relationshipName>
    <type>Lookup</type>
</CustomField>