force-app/main/default/objects/Innovation_Idea__c/fields/Demo__c.field-meta.xml
<CustomField>
    <fullName>Demo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demo</label>
    <referenceTo>Demo__c</referenceTo>
    <relationshipLabel>Ideas (Innohub)</relationshipLabel>
    <relationshipName>Ideas_Innohub</relationshipName>
    <type>Lookup</type>
</CustomField>