force-app/main/default/objects/Innovation_Idea__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>TextArea</type>
</CustomField>