force-app/main/default/objects/Innovation_Idea__c/fields/Describe_your_evolution__c.field-meta.xml
<CustomField>
    <fullName>Describe_your_evolution__c</fullName>
    <label>Describe your evolution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>