force-app/main/default/objects/Innovation_Idea__c/fields/Engage_Team_Comments__c.field-meta.xml
<CustomField>
    <fullName>Engage_Team_Comments__c</fullName>
    <label>Engage Team Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>