force-app/main/default/objects/Innovation_Idea__c/fields/Impact_to_employee_customer_experience__c.field-meta.xml
<CustomField>
    <fullName>Impact_to_employee_customer_experience__c</fullName>
    <label>Impact to employee &amp; customer experience</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>