force-app/main/default/objects/Innovation_Idea__c/fields/Improvement_Request__c.field-meta.xml
<CustomField>
    <fullName>Improvement_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Improvement Request</label>
    <type>Checkbox</type>
</CustomField>