force-app/main/default/objects/Innovation_Idea__c/fields/Recommended__c.field-meta.xml
<CustomField>
    <fullName>Recommended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recommended</label>
    <type>Checkbox</type>
</CustomField>