force-app/main/default/objects/Innovation_Idea__c/fields/Rejected_reason__c.field-meta.xml
<CustomField>
    <fullName>Rejected_reason__c</fullName>
    <label>Rejected reason</label>
    <type>TextArea</type>
</CustomField>