force-app/main/default/objects/Innovation_Idea__c/fields/Replacement__c.field-meta.xml
<CustomField>
    <fullName>Replacement__c</fullName>
    <label>Replacement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>