force-app/main/default/objects/Innovation_Idea__c/fields/Shortlisted__c.field-meta.xml
<CustomField>
    <fullName>Shortlisted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shortlisted</label>
    <type>Checkbox</type>
</CustomField>