force-app/main/default/objects/Innovation_Idea__c/fields/Show_Idea__c.field-meta.xml
<CustomField>
    <fullName>Show_Idea__c</fullName>
    <formula>NOT(
 AND(
   ISPICKVAL( Challenge__r.Status__c ,&quot;Shortlisting&quot;),
   NOT( Shortlisted__c ) 
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns false if the Challenge Status is &quot;Shortlisting&quot; and the &quot;Shortlisted&quot; checkbox on the Idea is unchecked.</inlineHelpText>
    <label>Show Idea</label>
    <type>Checkbox</type>
</CustomField>