force-app/main/default/objects/Innovation_Idea__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stage1</fullName>
            </value>
            <value>
                <fullName>Stage2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>