force-app/main/default/objects/Innovation_Idea__c/fields/Video_Title__c.field-meta.xml
<CustomField>
    <fullName>Video_Title__c</fullName>
    <description>Holds the title for the video</description>
    <inlineHelpText>Please enter the title of the video you wish to add to the record</inlineHelpText>
    <label>Video Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>