force-app/main/default/objects/Innovation_Idea__c/fields/Video_URL__c.field-meta.xml
<CustomField>
    <fullName>Video_URL__c</fullName>
    <description>The fields holds the url of the video to display on this record</description>
    <inlineHelpText>Please enter the embed URL for your chosen video</inlineHelpText>
    <label>Video URL</label>
    <type>Url</type>
</CustomField>