force-app/main/default/objects/Innovation_Idea__c/recordTypes/Challenge_Submission.recordType-meta.xml
<RecordType>
    <fullName>Challenge_Submission</fullName>
    <active>true</active>
    <description>Record Type reserved for Ideas created as part of a challenge</description>
    <label>Challenge Submission</label>
</RecordType>