force-app/main/default/objects/Innovation_Idea__c/recordTypes/COE_Request.recordType-meta.xml
<RecordType>
    <fullName>COE_Request</fullName>
    <active>true</active>
    <label>COE Request</label>
</RecordType>