force-app/main/default/objects/Innovation_Idea__c/recordTypes/DCAD.recordType-meta.xml
<RecordType>
    <fullName>DCAD</fullName>
    <active>true</active>
    <label>DCAD Project</label>
</RecordType>