force-app/main/default/objects/Innovation_Idea__c/recordTypes/Evolution_Request.recordType-meta.xml
<RecordType>
    <fullName>Evolution_Request</fullName>
    <active>true</active>
    <description>An enhancement request to a feature or functionality that already exists in our CRM today</description>
    <label>Evolution Request</label>
</RecordType>