force-app/main/default/objects/Innovation_Idea__c/recordTypes/Idea.recordType-meta.xml
<RecordType>
    <fullName>Idea</fullName>
    <active>true</active>
    <description>A brand new innovative feature, functionality, or process which could leverage the power of our CRM to improve the customer or employee experience</description>
    <label>Idea</label>
</RecordType>